new model claim_errors; forms revised

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -250,7 +250,7 @@ aside {
 
 /* forms */
 
-#session_remember_me, #user_activated {
+#session_remember_me, #user_activated, #diagnosis_active {
   width: 25px;
   margin-left: 0;
 }
