--- a/app/views/diagnoses/_diagnosis.html.erb
+++ b/app/views/diagnoses/_diagnosis.html.erb
@@ -1,5 +1,5 @@
      <tr>
-	<td><%= link_to "#{diagnosis.code}", diagnosis %> </td>
+	<td><%= link_to "#{diagnosis.code}", edit_diagnosis_path(diagnosis) %> </td>
 	<td><%= diagnosis.descr %></td> 
 	<td><%= diagnosis.active %> </td> 
         <td>
