--- a/app/views/diagnoses/edit.html.erb
+++ b/app/views/diagnoses/edit.html.erb
@@ -1,7 +1,7 @@
 <% provide(:title, 'Edit Diagnosis') %>
 <% provide(:button_text, 'Save changes') %>
-<h1>Edit Diagnosis</h1>
 
-  <div class="col-sm-6 col-sm-offset-4">
+  <div class="col-sm-5 col-sm-offset-4">
+    <h3 class='display-1'>Edit Diagnosis</h3>
     <%= render 'form' %>
   </div>
