--- a/app/views/procedures/new.html.erb
+++ b/app/views/procedures/new.html.erb
@@ -1,7 +1,7 @@
 <% provide(:title, 'New Procedure') %>
 <% provide(:button_text, 'Save') %>
-<h1>New Procedure</h1>
 
-<div class="col-md-8 col-sm-12 col-md-offset-3 col-sm-offset-3">
+<div class="col-sm-8 col-sm-offset-2">
+   <h3 class='display-1'>New Procedure</h3>
     <%= render 'form' %>
 </div>
