--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,13 +1,13 @@
 <% provide(:title, @user.name) %>
 
-	<h1><%= @user.name %> -  User's profile </h1>
-
-<div class="row justify-content-sm-center">
-  <div class="col-sm-6 col-sm-offset-3">
+<div class="col-sm-6 col-sm-offset-3">
+    <h3 class='display-1'><%= @user.name %> -  User profile </h3>
 	   <pre>
 	      Name: <%= @user.name %>
 	      Email: <%= @user.email %>
 	      Role: <%= @user.role %>
+	      Created: <%= @user.created_at %>
+	      Active? <%= @user.activated %>
            </pre>
 	    
 	    <%= button_to "Edit", edit_user_path(@user), class: "btn btn-primary", :method => "get" %>
