--- a/app/views/visits/_form.html.erb
+++ b/app/views/visits/_form.html.erb
@@ -49,19 +49,19 @@
   </div>
 
   <div class="col-sm-2">
-  <%= f.input :proc_code, collection: @procedures, label_method: :code, value_method: :code, prompt: 'Select', label: "Service" %> 
+  <%= f.input :proc_code, collection: @procedures, label_method: :code, value_method: :code, prompt: 'Select', label: "Service", include_blank: 'None' %> 
   </div>
 
   <div class="col-sm-2">
-  <%= f.input :proc_code2, collection: @procedures, label_method: :code, value_method: :code, prompt: 'Select', label: "Service"  %>
+  <%= f.input :proc_code2, collection: @procedures, label_method: :code, value_method: :code, prompt: 'Select', label: "Service", include_blank: 'None'  %>
   </div>
 
   <div class="col-sm-2">
-  <%= f.input :proc_code3, collection: @procedures, label_method: :code, value_method: :code, prompt: 'Select', label: "Service" %>
+  <%= f.input :proc_code3, collection: @procedures, label_method: :code, value_method: :code, prompt: 'Select', label: "Service", include_blank: 'None' %>
   </div>
 
   <div class="col-sm-2">
-  <%= f.input :proc_code4, collection: @procedures, label_method: :code, value_method: :code, prompt: 'Select', label: "Service"  %>
+  <%= f.input :proc_code4, collection: @procedures, label_method: :code, value_method: :code, prompt: 'Select', label: "Service", include_blank: 'None'  %>
   </div>
 </div
 
