--- a/app/views/diagnoses/new.html.erb
+++ b/app/views/diagnoses/new.html.erb
@@ -1,7 +1,7 @@
 <% provide(:title, 'New Diagnostic Code') %>
 <% provide(:button_text, 'Save') %>
-<h1>New Diagnostic Code </h1>
 
-  <div class="col-sm-6 col-sm-offset-4">
+  <div class="col-sm-5 col-sm-offset-4">
+    <h3 class='display-1'>New Diagnosis</h3>
     <%= render 'form' %>
   </div>
