--- a/app/views/edt_files/_edt_file.html.erb
+++ b/app/views/edt_files/_edt_file.html.erb
@@ -1,14 +1,13 @@
 <% doc = Doctor.find_by(provider_no: edt_file.provider_no) %>
      <tr>
         <% if edt_file.filespec.present? && File.exists?(edt_file.filespec) && device_is_desktop? %>
-          <td><%= link_to edt_file.id, edt_file, remote: true, 'data-toggle':  "modal", 'data-target': '#modal-window' %></td>
+          <td><%= link_to edt_file.filename, edt_file, remote: true, 'data-toggle':  "modal", 'data-target': '#modal-window' %></td>
         <% else %>
-	  <td class='tbl_sm'><%= edt_file.id %></td>
+	  <td class='tbl_md'><%= edt_file.filename %></td>
         <% end %>
 
         <td><%= edt_file.ftype_str %></td>
         <td class='tbl_md'><%= doc.lname %></td>
-	<td class='tbl_md'><%= edt_file.filename %></td>
         <td><%= edt_file.upload_date %></td>
 	<td cless='tbl_sm'><%= edt_file.claims %></td>
 	<td><%= edt_file.services %></td>
