--- a/app/views/forms/_myform.html.erb
+++ b/app/views/forms/_myform.html.erb
@@ -1,50 +1,43 @@
-<%= form_for @form do |f| %>
+<div class="well">
+<%= simple_form_for @form do |f| %>
   <%= render 'shared/error_messages', object: f.object %>
 
 <!-- Row 1 -->
 <div class="row">
-  <div class="col-sm-2">
-	  <%= f.label :Name %>
-          <%= f.text_field :name %>
+  <div class="col-sm-3">
+          <%= f.input :name %>
   </div>
   
-  <div class="col-sm-2">
-	  <%= f.label :'Form Type' %>
-          <%= f.select :ftype, FORM_TYPES %>
+  <div class="col-sm-3">
+          <%= f.input :ftype, collection: FORM_TYPES, label: 'Form Type' %>
   </div>
   
-  <div class="col-sm-2">
-	  <%= f.label :Format %>
-          <%= f.select :format, FORM_FORMATS %>
+  <div class="col-sm-3">
+          <%= f.input :format, collection: FORM_FORMATS %>
   </div>
   
-  <div class="col-sm-2">
+  <div class="col-sm-3">
 	  <%= f.label :'Fillable?' %>
           <%= f.check_box :fillable %>
   </div>
-
-
 </div>
 
 
 <!-- Row 2 -->
 <div class="row">
-  <div class="col-sm-8">
-	  <%= f.label :Description %>
-          <%= f.text_field :descr %>
+  <div class="col-sm-12">
+          <%= f.input :descr, label: 'Description' %>
   </div>
 </div>
   
 <!-- Row 3 -->
 <div class="row">
-  <div class="col-sm-4">
-	  <%= f.label :'Effective Date' %>
-          <%= f.date_field :eff_date %>
+  <div class="col-sm-6">
+          <%= f.input :eff_date, label: 'Effective Date', html5: true %>
   </div>
   
-  <div class="col-sm-4">
-	  <%= f.label :'File Name' %>
-          <%= f.text_field :filename %>
+  <div class="col-sm-6">
+          <%= f.input :filename %>
   </div>
 
 </div>
@@ -53,11 +46,11 @@
 
 <div class="row">
     <div class="spacer-20"></div>
-    <div class="col-sm-8">
+    <div class="col-sm-12">
     <%= f.submit yield(:button_text), class: "btn btn-primary" %>
     </div>
 </div>
 
 <% end %>
 
-
+</div>
