--- a/app/views/forms/edit.html.erb
+++ b/app/views/forms/edit.html.erb
@@ -1,7 +1,7 @@
 <% provide(:title, 'Edit form') %>
 <% provide(:button_text, 'Save changes') %>
-<h1>Edit Form</h1>
 
-<div class="col-md-8 col-sm-12 col-md-offset-3 col-sm-offset-3">
-<%= render 'myform' %>
+<div class="col-md-7 col-sm-12 col-md-offset-3 col-sm-offset-3">
+  <h3 class='display-1'>Edit Form</h3>
+  <%= render 'myform' %>
 </div>
