--- a/app/views/procedures/_form.html.erb
+++ b/app/views/procedures/_form.html.erb
@@ -1,30 +1,32 @@
+<div class="well">
+
 <%= simple_form_for @procedure do |f| %>
   <%= render 'shared/error_messages', object: f.object %>
 
   <!-- Row 1 -->
 <div class="row">
-  <div class="col-sm-2">
+  <div class="col-sm-3">
           <%= f.input :code, label: 'Service Code' %>
   </div>
   
-  <div class="col-sm-2">
+  <div class="col-sm-3">
 	  <%= f.input :ptype, collection: PROC_TYPES, label: 'Service Type', include_blank: false,
  	      label_html: { "data-toggle": 'tooltip', class: "has-tip",
               title: "Use '3RD' for all 3rd party procedures, 'HCP' otherwise"}  %>
   </div>
 
-  <div class="col-sm-2">
+  <div class="col-sm-3">
 	  <%= f.input :unit, value: @procedure.unit || 1, label: 'Number of Units' %>
   </div>
 
-  <div class="col-sm-2">
+  <div class="col-sm-3">
 	  <%= f.input :percent, value: @procedure.percent || 0 %>
   </div>
 </div>
 
   <!-- Row 2 -->
 <div class="row">
-  <div class="col-sm-8">
+  <div class="col-sm-12">
 	  <%= f.input :descr, label: 'Description' %>
   </div>
 </div>
@@ -32,10 +34,10 @@
   <!-- Row 3 -->
 
 <div class="row">
-  <div class="col-sm-4">
+  <div class="col-sm-6">
           <%= f.input :cost, label: 'Service Fee' %>
   </div>
-  <div class="col-sm-4">
+  <div class="col-sm-6">
           <%= f.input :eff_date, as: :date, start_year: 1900, end_year: Date.today.year+1, label: 'Effective Date', html5: true %>
   </div>
 </div>
@@ -43,17 +45,17 @@
   <!-- Row 4 -->
 
 <div class="row">
-    <div class="col-sm-3">
+    <div class="col-sm-4">
 	    <%= f.input :diag_req, label: 'Requires Diagnosis?',
 		label_html: { "data-toggle": 'tooltip', class: "has-tip",
 		title: "Procedure with this parameter set will require selection of diagnosis during visit creation"}  %>
     </div>
 
-    <div class="col-sm-3">
+    <div class="col-sm-4">
           <%= f.input :ref_req, label: 'Requires Referral?' %>
     </div>
 
-    <div class="col-sm-3">
+    <div class="col-sm-4">
 	    <%= f.input :active, label: 'Active procedure?',
 		label_html: { "data-toggle": 'tooltip', class: "has-tip", 
 		title: "Procedure with this parameter set will appear in the drop-down menu of available procedures on visit page"}  %>
@@ -65,13 +67,14 @@
 
   <div style="height: 20px;"></div>
 <div class="row">
-    <div class="col-sm-8">
+    <div class="col-sm-12">
     <%= f.submit yield(:button_text), class: "btn btn-primary" %>
     </div>
 </div>
 
 <% end %>
 
+</div>
 
 <script>
 	$('body').tooltip({ selector: "[data-toggle~='tooltip']"});
