--- a/app/views/procedures/edit.html.erb
+++ b/app/views/procedures/edit.html.erb
@@ -1,9 +1,9 @@
 <% provide(:title, 'Edit procedure') %>
 <% provide(:button_text, 'Save changes') %>
-<h1>Edit procedure</h1>
 
-<div class="col-md-9 col-sm-12 col-md-offset-3 col-sm-offset-2">
-<%= render 'form' %>
+<div class="col-sm-8 col-sm-offset-2">
+   <h3 class='display-1'>Edit Procedure</h3>
+    <%= render 'form' %>
 </div>
 
 
