--- a/app/views/providers/_provider.html.erb
+++ b/app/views/providers/_provider.html.erb
@@ -1,5 +1,5 @@
      <tr>
-	<td><%= link_to "#{provider.name}", provider %> </td>
+	<td><%= link_to "#{provider.name}", edit_provider_path(provider) %> </td>
 	<td><%= "#{provider.addr1}  #{provider.addr2}" %> </td> 
 	<td><%= provider.city %></td> 
 	<td><%= provider.prov %></td> 
