--- a/app/views/vaccines/_vaccine.html.erb
+++ b/app/views/vaccines/_vaccine.html.erb
@@ -1,5 +1,5 @@
      <tr>
-	<td><%= link_to vaccine.name, vaccine %> </td>
+	<td><%= link_to vaccine.name, edit_vaccine_path(vaccine) %> </td>
 	<td><%= vaccine.target %> </td> 
 	<td><%= vaccine.route %></td> 
 	<td><%= vaccine.dose %></td> 
