--- a/app/views/visits/_form.html.erb
+++ b/app/views/visits/_form.html.erb
@@ -8,7 +8,7 @@
   if current_user.admin? 
      disabled = []
   elsif @visit.status == ERROR 
-     disabled = ( READY..CANCELLED ).to_a
+     disabled = ( BILLED..CANCELLED ).to_a
   elsif @visit.billing_ref.present?
      disabled = [ARRIVED,READY,CANCELLED]
   elsif @visit.hcp_proc_codes.present? 
