--- a/app/views/vaccines/edit.html.erb
+++ b/app/views/vaccines/edit.html.erb
@@ -1,12 +1,10 @@
 <% provide(:title, 'Edit Vaccine') %>
 <% provide(:button_text, 'Save changes') %>
-<h1>Edit Vaccine</h1>
 
-<div class="row justify-content-md-center">
-  <div class="col-md-4 col-md-offset-4">
+<div class="col-sm-8 col-sm-offset-2">
+   <h3 class='display-1'>Edit Vaccine</h3>
 
 <%= render 'form' %>
 
-  </div>
 </div>
 
