--- a/app/views/vaccines/new.html.erb
+++ b/app/views/vaccines/new.html.erb
@@ -1,11 +1,7 @@
 <% provide(:title, 'New Vaccine') %>
 <% provide(:button_text, 'Save') %>
-<h1>New Vaccine </h1>
 
-<div class="row justify-content-sm-center">
-	<div class="col-sm-4 col-sm-offset-4">
-
+<div class="col-sm-8 col-sm-offset-2">
+   <h3 class='display-1'>New Vaccine</h3>
 	<%= render 'form' %>
-
-	</div>
 </div>
