--- a/app/views/visits/_visit.html.erb
+++ b/app/views/visits/_visit.html.erb
@@ -1,10 +1,12 @@
 <tr>
   <td><%= link_to visit.entry_ts, patient_visit_path(@patient,visit) %> </td>
   <td>
+  <% if @date == Date.today || current_user.admin? %>
   <% if remote %>
      <%= link_to '<i class="glyphicon glyphicon-pencil"></i>'.html_safe, edit_patient_visit_path(@patient,visit), remote: true, 'data-toggle':  "modal", 'data-target': '#modal-window' %> </td>
   <% else %>
      <%= link_to '<i class="glyphicon glyphicon-pencil"></i>'.html_safe, edit_patient_visit_path(@patient,visit) %>
+  <% end %>
   <% end %>
   </td>
   <td><%= visit.doctor.lname %></td>
