--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,9 +18,7 @@
 
    <div id="footer">
       <%= render 'layouts/footer'  %>
-      <%= debug(params) if DEBUG_FLAG > 0 %>
+      <%= debug(params) %> <%#if DEBUG_FLAG > 0 %>
    </div>
-
-  
   </body>
 </html>
