--- a/app/views/providers/index.html.erb
+++ b/app/views/providers/index.html.erb
@@ -25,5 +25,7 @@
 
 <div class="bottom_buttons ">
 <%= will_paginate @providers, class: "btn" %>
+<% unless current_user.doctor? %>
 <%= button_to "Add Provider", new_provider_path, class: "btn btn-primary col-md-12", :method => "get" %>
+<% end %>
 </div>
