--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -3,13 +3,13 @@
 <table class="tbl table-hover">
    <thead>
       <tr>
-          <th>Name</th>
+          <th>User</th>
           <th>Email</th>
           <th>Role</th>
 	  <th>Active?</th>
 	  <th>Created</th>
-	  <th>&nbsp;</th>
-	  <th>&nbsp;</th>
+	  <th>Updated</th>
+	  <th class='tbl_md'></th>
       </tr>
   </thead>
   <tbody>
