--- a/app/views/edt_files/index.html.erb
+++ b/app/views/edt_files/index.html.erb
@@ -5,14 +5,15 @@
 <table class="tbl table-hover"> 
   <thead>
       <tr>
-          <th class='tbl_md'>File</th>
+	  <th class='tbl_md'><%= sortable 'filename', 'File' %></th>
 	  <th class='tbl_md'><%= sortable 'ftype', 'Type' %></th>
           <th class='tbl_md'><%= sortable 'provider_no', 'Provider' %></th>
 	  <th><%= sortable 'upload_date', 'Uploaded' %></th>
+	  <th cless='tbl_md'>Doctors</th>
 	  <th cless='tbl_md'>Claims</th>
           <th class='tbl_md'>Services</th>
-	  <th cless='tbl_md'>TTL</th>
-	  <th>Download</th>
+	  <th cless='tbl_md'>Total Amt</th>
+	  <th class='tbl_sm'></th>
 	   <% if current_user.admin?  %>
           <th class='tbl_sm'></th>
 	  <% end %>
