--- a/app/views/layouts/_doc_docs.html.erb
+++ b/app/views/layouts/_doc_docs.html.erb
@@ -1,9 +1,8 @@
-<% menu_items = %w(reports invoices daily_charts ) %>
+<% menu_items = %w(reports invoices daily_charts paystubs ) %>
 <li class="dropdown nav-item <%= 'active' if menu_items.include?(controller_name) %>"> 
   <a href="#" class="dropdown-toggle" data-toggle="dropdown"> Docs <b class="caret"></b> </a>
   <ul class="dropdown-menu">
      <li><%= link_to "Reports", reports_path %></li>
-     <li> <%= link_to "Invoices", invoices_path, method: :get %> </li>
-     <li> <%= link_to "Daily Charts", daily_charts_path, method: :get %> </li>
+     <li> <%= link_to "Pay Stubs", paystubs_path, method: :get %> </li>
   </ul>
 </li>
