--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -8,7 +8,15 @@
     </div>
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav navbar-right">
-        <%= render 'layouts/navigation_links' %>
+      <% if logged_in? %>
+	<% if current_user.doctor? %>
+           <%= render 'layouts/doc_navigation_links' %>
+	<% else %>
+           <%= render 'layouts/navigation_links' %>
+	<% end %>
+      <% else %>
+  	   <li><%= link_to "Log in", login_path %></li>
+      <% end %>
       </ul>
     </div>
   </div>
