--- a/app/views/daysheet/_visit.html.erb
+++ b/app/views/daysheet/_visit.html.erb
@@ -42,7 +42,7 @@
 	
 	<!-- #modal-window is defined in index -->	
 	<td><%= link_to '<i class="glyphicon glyphicon-credit-card"></i>'.html_safe, label_patient_path(pat), remote: remote, 'data-toggle':  "modal", 'data-target': '#modal-window',  method: 'get'  %></td>
-	<% if @date == Date.today || @date.blank? %>
+  	<% if visit.not_billed? || current_user.admin? %>
 	  <td><%= link_to '<i class="glyphicon glyphicon-file"></i>'.html_safe, visitform_patient_visit_path(pat,visit), remote: remote, 'data-toggle':  "modal", 'data-target': '#modal-window', method: 'get'  %></td>
 	  <td>
 	  <% if remote %>
