--- a/app/views/forms/_form.html.erb
+++ b/app/views/forms/_form.html.erb
@@ -10,7 +10,9 @@
 	<td><%= form.format_str %></td>
 	<td><%= form.fillable_str %></td>
 	<td><%= link_to '<i class="glyphicon glyphicon-download"></i>'.html_safe, download_form_path(form) %></td> 
-	<td><%= link_to '<i class="glyphicon glyphicon-pencil"></i>'.html_safe, edit_form_path(form) %> <td>
+	<% unless current_user.doctor? %>
+	  <td><%= link_to '<i class="glyphicon glyphicon-pencil"></i>'.html_safe, edit_form_path(form) %></td>
+	<% end %>
 	<% if current_user.admin?  %>
 	   <%= link_to '<i class="glyphicon glyphicon-trash"></i>'.html_safe, form, method: :delete, data: { confirm: "Are you sure you want to delete #{form.name}?" } %>
         <% end %>
