--- a/app/views/procedures/_procedure.html.erb
+++ b/app/views/procedures/_procedure.html.erb
@@ -1,6 +1,10 @@
      <tr>
+	<% if current_user.doctor? %>
+	<td><%= link_to "#{procedure.code}", procedure %> </td>
+	<% else %>
 	<td><%= link_to "#{procedure.code}", edit_procedure_path(procedure) %> </td>
-	<td><%= procedure.ptype %> </td> 
+	<% end %>
+	<td><%= procedure.ptype_str %> </td> 
 	<td><%= procedure.descr %></td> 
 	<td><%= procedure.cost %></td> 
 	<td><%= procedure.unit %></td> 
