--- a/app/views/procedures/show.html.erb
+++ b/app/views/procedures/show.html.erb
@@ -25,7 +25,9 @@
 	      Active?: <%= @procedure.active %>
 
            </pre>
+    <% unless current_user.doctor? %>
     <%= button_to "Edit", edit_procedure_path(@procedure), class: "btn btn-primary", :method => "get" %>
+    <% end %>
     <p>
     <%= button_to "Back", procedures_path, class: "btn btn-primary", :method => "get" %>
   </div>
