--- a/app/views/providers/show.html.erb
+++ b/app/views/providers/show.html.erb
@@ -13,12 +13,17 @@
 	                <%= @provider.postal %>
 	                <%= @provider.country %>
 
+	      Email:    <%= @provider.email %>
 	      Phone:    <%= @provider.phone1 %>
 	      Phone2:   <%= @provider.phone2 %>
 	      Fax : 	<%= @provider.fax %>
 
            </pre>
+    <% unless current_user.doctor? %>
     <%= button_to "Edit", edit_provider_path(@provider), class: "btn btn-primary", :method => "get" %>
+    <% end %>
+    <p>
+    <%= button_to "Back", providers_path, class: "btn btn-primary", :method => "get" %>
   </div>
 </div>
 
