--- a/app/views/visits/show.html.erb
+++ b/app/views/visits/show.html.erb
@@ -104,7 +104,7 @@
  <% end %>
 
  <div class="col-sm-3 col-md-2">
- <%= button_to "Back To Patient", patient_path(@patient), class: "btn btn-primary", method: 'get'  %>
+ <%= button_to "Patient Profile", patient_path(@patient), class: "btn btn-primary", method: 'get'  %>
  </div>
 
 </div>
