--- a/app/views/claims/index.html.erb
+++ b/app/views/claims/index.html.erb
@@ -24,12 +24,12 @@
 	  <th>Svc Date </th>
           <th>Provider</th>
  	  <th class='tbl_sm'>Svcs</th>
- 	  <th>Submitted</th>
+ 	  <th>Subm.</th>
  	  <th>Paid</th>
           <th>Acc #</th>
 	  <th>HC#</th> 
           <th class='tbl_sm'>Prov</th>
-	  <th class='tbl_sm'>Pmt Type</th> 
+	  <th class='tbl_sm'>Pgm</th> 
 	  <th>RA file</th>
           <th>Date Paid</th>
 	  <th>Visit</th> 
