--- a/app/views/claims/_claim.html.erb
+++ b/app/views/claims/_claim.html.erb
@@ -5,12 +5,19 @@
 
 <tr>
 <td><%= link_to claim.claim_no, claim_path(claim) %></td>
+<td><%= claim.accounting_no %></td>
 <td><%= claim.date %></td>
 <td><%= doctor.lname %></td>
 <td><%= claim.services.size %></td>
 <td><%= sprintf("$%.2f",claim.damt_subm) %></td>
-<td <%= claim.amt_subm == claim.amt_paid ? '':'class="hlight"'.html_safe %>> <%= sprintf("$%.2f",claim.damt_paid) %></td>
-<td><%= claim.accounting_no %></td>
+<td>
+<% if claim.amt_subm == claim.amt_paid %>
+  <%= sprintf("$%.2f",claim.damt_paid) %>
+<% else %>
+  <% cls = claim.amt_subm < claim.amt_paid ? "text-success" : "text-danger" %> 
+  <span class="<%= cls %>"><%= sprintf("$%.2f",claim.damt_paid) %></span>
+<% end %>
+</td>
 <td><%= "#{claim.ohip_num} #{claim.ohip_ver}" %></td>
 <td><%= claim.province %></td>
 <td><%= claim.pmt_pgm %></td>
