--- a/app/views/layouts/_billing.html.erb
+++ b/app/views/layouts/_billing.html.erb
@@ -3,7 +3,7 @@
 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Billing<b class="caret"></b> </a>
 <ul class="dropdown-menu">
 <li><%= link_to "Daily Billing", billings_path %></li>
-<li><%= link_to "MHO Claims", claims_path  %> </li>
+<li><%= link_to "Paid Claims", claims_path  %> </li>
 <li> <%= link_to "Pay Stubs", paystubs_path, method: :get %> </li>
 <li> <%= link_to "MHO RA Messages", ra_messages_path, method: :get %> </li>
 </ul>
